figma carousel image changed and skill section small device flex fixed

--- a/style1.css
+++ b/style1.css
@@ -53,7 +53,7 @@ mark,mark b{
     position: relative;
     height:auto;
     width: 100%;
-    max-width:800px;
+    max-width:740px;
     margin: auto;    
   }
   .carousel .carousel-item{
